--- a/templates/adminPage/prodcAdmin.html.twig
+++ b/templates/adminPage/prodcAdmin.html.twig
@@ -23,7 +23,7 @@
                                                 <div class="card-body">
                                             <table id="simpletable"
                                                    class="table table-striped table-bordered nowrap">
-                                                   <a href="{{ path('producto_new') }}">Create new</a>
+                                                   <a href="{{ path('newProducto') }}">Create new</a>
                                                 <thead>
                                                 <tr>
                                                     <th>Imagen</th>
