--- a/templates/adminPage/detalleUsuario.html.twig
+++ b/templates/adminPage/detalleUsuario.html.twig
@@ -106,11 +106,11 @@
                                                         </div>
                                                     </div><br>
                                                     <hr>
-                                                    <div style="text-align:center">
+                                                    
                                                     {% set contador =  contador + 1 %}
                                                 {% endif %}
                                             {% endfor %}
-
+<div style="text-align:center">
                                               {% set totalItems = data|length %}
 			                                    {% set lastPage = (totalItems / itemsPerpage)|round(0,'ceil') %}
 			                                    {% set lastPageItems = (itemsPerpage * lastPage) - totalItems %}
@@ -123,7 +123,7 @@
 			{% endif %}
 			{% for i in 1..lastPage %}
 				{% if currentPage == i %}
-					<span class="tm-btn tm-btn-default tm-right" style="color:green">{{ i }}</span>
+					<span class="tm-btn tm-btn-default tm-right" style="background-color:#98999A; color:white">{{ i }}</span>
 
 				{% else %}
 					<a href="{{ path('detalleUsuarios',{'id':id, 'currentPage':i}) }}" class="tm-btn tm-btn-default tm-right">{{ i }}</a>
