ya saca el nombre al darle click

--- a/templates/adminPage/newProducto.html.twig
+++ b/templates/adminPage/newProducto.html.twig
@@ -48,38 +48,66 @@
 
     <script>
     
-
+                    
             var dropzone = document.getElementById('dropzone');
 
             var displayUploads = function(data){
                 var uploads = document.getElementById('uploads'),
                     anchor,
                     x;
-
-                for(x = 0; x < data.length; x = x + 1){
                     
+                for(x = 0; x < data.length; x = x + 1){
+                    var arrayData= data
                     anchor = document.createElement('a');
-                    borrar = document.createElement('a');
+                    borrar = document.createElement('span');
                     anchor.href = data[x].file;
+                    anchor.id = "archivo" + x;
                     anchor.innerText = data[x].name;
-                    borrar.innerText = " X"
-                    borrar.style.color="red"
-                    borrar.href =data[x].file
+                    borrar.innerText = " X";
+                    borrar.style.marginRight = "7px";
+                    borrar.style.color="red";
+                    borrar.className  = "archivo" + x;
+                    borrar.style.cursor="pointer";
+                   // borrar.setAttribute('onclick','ejem(this.id)')
                     uploads.appendChild(anchor);
-                    uploads.appendChild(borrar)
-                    
+                    uploads.appendChild(borrar);
                 }
 
-                for(x = 0; x < data.length; x = x + 1){
-                    if(data[x].name == "thumb.jpg"){
-                        data.pop();
-                    }
-                
-                }
-
-                console.log(data);
+                  //  if(data[x].name == "thumb.jpg"){
+                  //      data.pop();        
+                  for(x = 0; x < data.length; x = x + 1){        
+              document.getElementsByClassName("archivo" + x)[0].addEventListener("click", function(){
+                        
+                        ejem(data)
+              });}
             }
-            
+
+                    function ejem(idx){
+
+                        
+                            
+                              for(x = 0; x < idx.length; x = x + 1){
+                            let clasX = document.getElementsByClassName("archivo" + x)[0].className;        
+                            //let documento = document.getElementById("archivo" + x).id;
+                            
+                           console.log(document.getElementById("archivo" + x).id);
+                            if( document.getElementById("archivo" + x).id == event.target.className){
+                                alert("Hola " + document.getElementById("archivo" + x).id);
+                            }}
+                            
+                           // console.log(documento);
+                            //console.log("hola" + idx[x].name)}
+                      //  for(x = 0; x < data.length; x = x + 1){
+
+                      //  }
+                      //  if("archivo2" == data[0].id){
+                       //     alert("lala");
+                       // }
+                        //for(x = 0; x < data.length; x = x + 1){
+
+                        //}
+                        //var idX = document.getElementById('uploads'),
+                    }
             var upload = function(files){
                 var formData = new FormData(),
                     xhr = new XMLHttpRequest(),
@@ -93,9 +121,10 @@
                     var data = JSON.parse(this.responseText);
                     
                     displayUploads(data);
-                    
+                    return data;
                     
                 }
+                
                     this.inner = function() {
         alert("hi");
     }
@@ -113,7 +142,6 @@
                 xhr.send(formData);
                 alert("Ha mandado la imagen")
             })};
-
             dropzone.ondrop = function(e){
                 e.preventDefault();
                 this.className = 'dropzone';
